# fp256bn-amcl

./: .gitmodules  Cargo.toml  README.md
32bit/: Cargo.toml
32bit/src/fp256bn/: big.rs  bls.rs  ecdh.rs  ecp.rs  ecp2.rs  fp.rs  fp12.rs  fp4.rs  hpke.rs  pair.rs
64bit/: Cargo.toml  README.md
64bit/src/: lib.rs
64bit/src/fp256bn/: big.rs  dbig.rs  ecp.rs  ecp2.rs  fp.rs  fp2.rs  fp4.rs
src/: lib.rs
src/fp256bn/: eddsa.rs  mpin.rs
