[package]
name = "fp256bn_amcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_pointer_width = "64")'.dependencies]
mcore64 = { path = "./64bit" } 

[target.'cfg(target_pointer_width = "32")'.dependencies]
mcore32 = { path = "./32bit"} 

[target.'cfg(target_pointer_width = "64")'.features]
default = []
std = ["mcore64/std"]

[target.'cfg(target_pointer_width = "32")'.features]
default = []
std = ["mcore32/std"]
